# operating-systems

./: .gitignore  .gitmodules  LICENSE  README.md  dd
1/untitled/: CMakeLists.txt
2/: .gitignore  Barber.h  CMakeLists.txt  Calc.h  Calculator.h  ConsoleApplication1.sln  ImageData.cpp  Logger.cpp  Logger.h  Manager.cpp  Manager.h  Parser.h  Point.h  Producer.h  README.md  User.cpp  consumer_producer.h  function_calculator.h  lab_2.cpp  lab_2.sln  laba 2.sln  log.txt  main.c  main.cpp  p1.c  queque.h  shm.out  test.cpp  thread_lab.cpp
2/ConsoleApplication1/: ConsoleApplication1.sln  ConsoleApplication1.vcxproj  log
2/Debug/: ConsoleApplication1.exe.recipe  ConsoleApplication1.ilk  ConsoleApplication1.vcxproj.FileListAbsolute.txt  laba 2.ilk  vc142.idb
2/OC_2_laba/: OC_2_laba.sln
2/ProcessManager/: main.cpp
2/Task 2, Поживилко Пётр, Витушко Лидия, 821701/: README.md
2/laba 2/: Header.cpp  Header.h  laba 2.cpp  laba 2.vcxproj  laba 2.vcxproj.filters
2/sinhron/: log.txt  sinhron.cpp  sinhron.vcxproj.filters
2/src/: Point.h  Source.c  log.txt  main.cpp
3/: .gitignore  BUILD  CMakeLists.TXT  CMakeLists.txt  Client.cpp  Constants.h  ExecutorServer.cpp  IDL.h  IDL_client  IDL_clnt.c  IDL_svc.c  ImageService.cpp  ImageService.h  Link.cpp  Link.h  Logger.cpp  OS Lab 3.cpp  OS3MFC.cpp  OS3MFC.rc  OS3MFC.vcxproj  OS3MFCDlg.cpp  Queue.h  README.md  Server.cpp  SocketAddress.cpp  SocketAddress.h  TCPSocket.cpp  TCPSocket.h  WORKSPACE  center.cpp  clients.sh  func_calc.proto  greeter_client.cc  machine.cpp  main-2.cpp  os3lab.vcxproj  os3lab.vcxproj.filters  resource.h  run.bat  stdafx.cpp
3/ArgentumServer/: CMakeLists.txt
3/Client/: CMakeCache.txt  CMakeLists.txt  Client  Client.cpp  Makefile  Utils.cpp  cmake_install.cmake  main.c
3/ImageService/: ImageService.sln
3/ImageServiceDowloader/: ImageServiceDowloader.sln
3/OC_3_client/: OC_3_laba.sln
3/Server/: CMakeCache.txt  CMakeLists.txt  ClientDetails.cpp  Makefile  Server  Server.cpp  Server.sln  Utils.cpp  cmake_install.cmake  main.cpp
3/TCP Server/: TCP Server.vcxproj  TCP Server.vcxproj.filters  TCPServer.cpp  TCPServer.sln  TCPServerThread.cpp  main.cpp
3/TCPClient/: TCPClient.cpp  TCPClient.sln  TCPClient.vcxproj  TCPClient.vcxproj.filters  main.cpp
3/client/: func_calc.cc
3/server/: func_calc.cc  server.sln
3/src/: ClientDetails.cpp  ExecutorServer.cpp  IDL.x  Server.cpp  Utils.h
4/: .gitignore  CMakeCache.txt  CMakeLists.txt  Cluster.cpp  Directory.cpp  Directory.h  ErrorsCode.h  File System.vcxproj  File System.vcxproj.filters  File.cpp  File.h  FileSystem  FileSystem.cpp  FileSystem.h  FileSystemController.cpp  Filesystem32.h  Jingle.cpp  Jingle.h  Makefile  OS4.vcxproj  OS4.vcxproj.filters  README  README.md  README.txt  THICK32.cpp  THICK32.h  Table.cpp  Table.h  a.out  cmake_install.cmake  command.h  commandFuncImpl.cpp  commandFuncImpl.h  commands.cpp  commands.h  commonfunc.cpp  commonfunc.h  file.cpp  file.h  fileSystem.h  (+11 more)
4/Debug/: OS4.exe.recipe  OS4.ilk  OS4.vcxproj.FileListAbsolute.txt  vc142.idb
4/FileSystem/: Block.cpp  Block.h  File.cpp  File.h  FileSystem.sln  Manager.cpp  Manager.h  Memory.cpp  Memory.h  main.cpp
4/FileToxin/: CMakeLists.txt
4/OC_4_laba/: OC_4_laba.sln
4/OS-4/: OS-4.sln
4/OS4 var6/: OS4 var6.sln
4/Task 4, Поживилко Пётр, Витушко Лидия, 821701/: README.md
4/memory/: memory.cpp  memory.h
4/os4/: os4.sln
4/scr/: Block.cpp  Block.h  ControlM.cpp  ControlM.h  File.cpp  File.h  Manager.cpp  Manager.h  PhMemory.cpp  PhMemory.h
4/src/: ActionResult.cpp  Block.h  Cluster.cpp  CopyFileAction.cpp  CreateFileAction.cpp  CustomFile.cpp  DeleteFileAction.cpp  Directory.cpp  Directory.h  File.cpp  (+24 more)
(+718 files in other folders)
